<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>tungnn.tutor.java</groupId>
        <artifactId>java-tutor</artifactId>
        <version>1.0.0</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>java-tutor-starter</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0.0</revision>
    </properties>

    <dependencies>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-core</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-jackson</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-jasper</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-jol</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-mail</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-document</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-ast</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-selenium</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-csv</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-mime</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-aws</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-ini</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>tungnn.tutor.java</groupId>
            <artifactId>java-ocr</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>
</project>